@@ -14,6 +14,7 @@ SVN
 -bug: Escape windows type back slashes in scripts
 -bug: Use safer Non Net-SNMP string parsing calls for snmpget and snmpgetnext
 -bug: be smart for SNMP V3 and use AuthNoPriv when privacy passphrase is empty
+-bug: Do not fail on insert for a duplicate record
 
 0.8.7g
 -feature: Multi threaded host polling
